# dual_autodiff

./: .gitignore  Dockerfile  MANIFEST.in  README.md  __init__.py  dual_autodiff.ipynb  main.aux  main.fdb_latexmk  main.fls  main.tex  pyproject.toml  pyproject_src.toml  requirements.txt  setup.py  setup_src.py  testing.py  touch.py  tox.ini  tutorial.ipynb
.github/workflows/: docker_image.yml  docker_image_x.yml
_minted-main/: 214516E07A5FF4B536CF2B99D7904B7A541C68F80C6A6F06151AFD63BAE50EBC.pygtex  77C9A03BF26EF8B5CFC500AF277905CE541C68F80C6A6F06151AFD63BAE50EBC.pygtex  DE1646A73A0DF5C54B0A0DA014397B13541C68F80C6A6F06151AFD63BAE50EBC.pygtex  F6A869400D5833D16BCA2474FE386617541C68F80C6A6F06151AFD63BAE50EBC.pygtex  FA02DCA444F0E8827ED61C9497B129E2541C68F80C6A6F06151AFD63BAE50EBC.pygtex
docs/: conf.py  index.rst  tutorial.ipynb
docs/_build/doctrees/: environment.pickle  index.doctree  tutorial.doctree
docs/_build/doctrees/nbsphinx/: tutorial.ipynb
docs/_build/html/: .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html  tutorial.ipynb
docs/_build/html/_sources/: tutorial.ipynb.txt
dual_autodiff/: __init__.py  autodiff.py  dual.c  dual.py  version.py
dual_autodiff-0.0.1.dist-info/: RECORD  top_level.txt
dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dual_autodiff_x/: Dockerfile  MANIFEST.in  __init__.py  dual_autodiff.ipynb  pyproject.toml  setup.py  tox.ini
dual_autodiff_x/dual_autodiff_x/: Dockerfile  __init__.py  dual copy.pyx  dual.c  dual.pyx
dual_autodiff_x/dual_autodiff_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dual_autodiff_x/src/dual_autodiff_x/: Dockerfile  __init__.py
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.1-cp310-cp310-musllinux_1_2_x86_64.whl  dual_autodiff_x-0.0.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.1-cp311-cp311-musllinux_1_2_x86_64.whl  dual_autodiff_x-0.0.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.1-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.1-pp310-pypy310_pp73-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl
report/: bibliography.bib  dual_autodiff.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex
report/_minted-main/: 9293119E356F9E25F0F70307BAC911A2541C68F80C6A6F06151AFD63BAE50EBC.pygtex  E27E8FF77A14B133DFC63B60437D5728541C68F80C6A6F06151AFD63BAE50EBC.pygtex
report/_minted-report/: 18C762A0A3CEE8B260F6FFD20DEB2230F73D778D6577DD371281B40198477396.pygtex  209D66CE9249CF5BFDEFA608CACC61ABF73D778D6577DD371281B40198477396.pygtex  41BA6587228E5D176EFC2DEBD2AD147DF73D778D6577DD371281B40198477396.pygtex  4899D0D12E6DF3F0C780B8B34265F7BBF73D778D6577DD371281B40198477396.pygtex  75EA25698781AD667C12E24748EE94EFF73D778D6577DD371281B40198477396.pygtex  9D805D20D0035F9F078D87D0A026B345F73D778D6577DD371281B40198477396.pygtex  AAE31895CC6FAD36F6845888D1181CFEF73D778D6577DD371281B40198477396.pygtex  D01C9D34F687452816EC4F66D2DF0548F73D778D6577DD371281B40198477396.pygtex  DDFF25832CD3C3ABBC4CF5CDBD02CC3AF73D778D6577DD371281B40198477396.pygtex  FDA1AD62ABF077A33796DD363C628A51F73D778D6577DD371281B40198477396.pygtex
source/: conf.py  dual_autodiff.ipynb  index.rst  tutorial.ipynb
tests/: test_collection.py  test_collection_x.py  test_dual.py  test_dual_x.py
wheelhouse/: dual_autodiff-0.0.1-py3-none-any.whl
