[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
version = "0.0.1"
description = "A Python package for automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Laura Just Fung", email = "lj441@cam.ac.uk" }
]

dependencies = [
    "numpy",
    "mpmath"
]

[tool.setuptools_scm]
write_to = "dual_autodiff/version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["."]
include = ["dual_autodiff"]
exclude = ["tests*", "docs*", "_*", "build*", "*.egg-info", "report*", "__pycache__"]


[project.urls]
Homepage = "https://github.com/ljf441/dual_autodiff"
Issues = "https://github.com/ljf441/dual_autodiff/issues"
