[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "Cython", "numpy", "cibuildwheel"]  # Build requirements
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["x86_64"]
skip = ["cp310-musllinux*", "cp311-musllinux*", "pp*", "cp312-musllinux*", "cp313*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dual_autodiff_x", "dual_autodiff_x.*"]

[project]
name = "dual_autodiff_x"
version = "0.0.1"
description = "A Python package for automatic differentiation using dual numbers."
authors = [
    { name = "Laura Just Fung", email = "lj441@cam.ac.uk" }
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "numpy",
    "cython",
    "mpmath"
]

[project.urls]
Homepage = "https://github.com/ljf441/dual_autodiff"
Issues = "https://github.com/ljf441/dual_autodiff/issues"